fix gmap icon IE bug + slide/600setting

--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,24 @@ h2 {
     color: #0C2340;
 }
 
+/*=========== scrollbar fix ==============*/
+@-ms-viewport { width: device-width; }
+
+html {
+    overflow: -moz-hidden-unscrollable;
+    height: 100%;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    -ms-overflow-style: none;
+    height: 100%;
+    width: calc(100vw + 18px);
+    overflow: auto;
+}
 /*=========================basic===========================*/
 
 html[lang="en"] p, html[lang="en"] p a, html[lang="en"] span{
@@ -539,7 +557,7 @@ html[lang="en"] .content2_txt p {
     animation-delay: 0s;
 }
 .banner-arrow img:first-child{
-   bottom:6px;
+   bottom:8px;
    -webkit-animation-delay: 0.5s;
     animation-delay: 0.5s;
 }
@@ -1794,13 +1812,13 @@ footer hr {
     display: -ms-inline-flex;
     /* IE10 */
     display: inline-flex;
-    width: 18%;
+    width: 28%;
     height: auto;
 }
 
 .footer_logo img {
     width: 100%;
-    min-width: 176px;
+    max-width: 180px;
 }
 
 .footer_title {
@@ -1828,7 +1846,7 @@ footer hr {
     justify-content: flex-end;
     align-items: flex-start;
     color: #999;
-    width: 72%;
+    width: 62%;
     line-height: 45px;
     font-size: 1em;
 }
@@ -1955,6 +1973,7 @@ footer hr {
 .nav1200 .nav-wrapper {
     position: relative;
     overflow-y: auto;
+    overflow-x:hidden;
     height: 100%;
 }
 
@@ -2163,6 +2182,7 @@ footer hr {
     -moz-transition: all 0.8s;
     -o-transition: all 0.8s;
     transition: all 0.8s;
+    transition-delay: .5s;
     opacity: 0;
     transform: translateY(50px);
 }
@@ -2487,10 +2507,11 @@ footer hr {
     height: 306px;
     z-index: 0;
 }
-.hotel-info{
-    position: relative;
+.hotel-info {
+    /* position: relative; */
     letter-spacing: 3px;
-    bottom: 30px;
+    padding-bottom: 30px;
+    /* bottom: 30px; */
     z-index: 2;
     width: 100%;
 }
@@ -2835,6 +2856,7 @@ footer hr {
     max-width: 140px;
     margin-left:2%;
     position: relative;
+    word-wrap: break-word;
 }
 .facility-service-incon span{
     margin-top: 20px;
@@ -2854,6 +2876,9 @@ footer hr {
    margin:0 auto;
    align-items:flex-end;
    justify-content:center;
+}
+.service-img img{
+    width: 100%;
 }
 
 .facility-service-incon h3{
@@ -3426,7 +3451,7 @@ ul.facility-nav li.current p{
         display: block;
     }
     .nav1200 {
-        display: block;
+     display: block;
     position: fixed;
     width: 100%;
     height: 100%;
